solve Kata4